# dobby

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  codecov.yml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/workflows/: ci-checks.yml  ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/commands/: check.rs  destroy.rs  elf.rs  exec.rs  init.rs  keeper.rs  logs.rs  metrics.rs  mod.rs  pair.rs  push.rs  register.rs  rollback.rs  scale.rs  secrets.rs  status.rs  token.rs  update.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  bootstrap_token.rs  elf_config.rs  keeper_config.rs  keeper_init.rs  lib.rs  manifest.rs  secrets.rs  state.rs  tls.rs
crates/core/src/auth/: tests.rs
crates/core/src/bootstrap_token/: tests.rs
crates/core/src/keeper_init/: tests.rs
crates/core/src/manifest/: tests.rs
crates/core/src/state/: tests.rs
crates/core/src/tls/: tests.rs
crates/core/tests/: manifest_fixtures.rs
crates/core/tests/fixtures/: koban.toml  mm-eh.toml
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/keeper/: Cargo.toml
crates/keeper/src/: config.rs  lib.rs  server.rs  tls.rs
crates/keeper/src/config/: tests.rs
crates/keeper/src/services/: keeper.rs  mod.rs
crates/keeper/src/services/keeper/: tests.rs
crates/keeper/src/tls/: tests.rs
crates/keeper/tests/: health.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
proto/: common.proto  elf.proto  keeper.proto
proto/dobby/v1/: common.proto  elf.proto  keeper.proto
src/: main.rs
systemd/: dobby-elf.service  dobby-keeper.service  dobby-rollback.service
