[package]
name = "dobby-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — CLI command tree (clap-based, dispatches to keeper/elf crates)"
publish = false

[dependencies]
dobby-core = { workspace = true }
dobby-keeper = { workspace = true }
dobby-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
const-hex = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tower-service = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
