[package]
name = "dobby-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — shared config parsing, atomic state, secret material primitives"
publish = false

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
const-hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
