[package]
name = "dobby-elf"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — Elf daemon (runs inside each managed LXC)"
publish = false

[dependencies]
dobby-core = { workspace = true }
dobby-proto = { workspace = true }
dobby-runtime = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "fs", "signal", "sync", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
