[package]
name = "dobby-elf"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — Elf daemon (runs inside each managed LXC)"
publish = false

[dependencies]
# Phase 1 stub — only `anyhow` is wired through to the unimplemented entry
# point. Real deps (dobby-core, dobby-proto, dobby-runtime, tokio, tonic,
# tracing) come back as the daemon body lands per phase.
anyhow = { workspace = true }

[lints]
workspace = true
