[package]
name = "dobby-keeper"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — Keeper daemon (LXC lifecycle, routing, auth, DNS, mDNS)"
publish = false

[dependencies]
dobby-core = { workspace = true }
dobby-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "fs", "signal", "sync", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
