[package]
name = "dobby-keeper"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — Keeper daemon (LXC lifecycle, routing, auth, DNS, mDNS)"
publish = false

[dependencies]
dobby-core = { workspace = true }
dobby-proto = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "fs", "signal", "sync", "time"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

# `prost` and `tonic-prost` aren't imported directly here, but the proto
# types re-exported from `dobby-proto` derive `prost::Message` and rely on
# tonic-prost runtime traits at link time. cargo-machete is source-level
# only and flags them as false positives.
[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[dev-dependencies]
tempfile = { workspace = true }
dobby-core = { workspace = true }
dobby-proto = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time"] }

[lints]
workspace = true
