[package]
name = "dobby-proto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — protobuf / gRPC generated types (internal)"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
protoc-bin-vendored = "3"

# `prost` and `tonic-prost` ARE used — but only by tonic-prost-build's
# generated code that lands in OUT_DIR/dobby.v1.rs and is `include!`d
# from src/lib.rs. cargo-machete walks `src/` only and can't see
# generated modules; cargo-udeps (build-graph aware) correctly says
# they're used.
[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[lints]
workspace = true
