[package]
name = "dobby-proxy"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dobby — reverse proxy (HTTP/1.1 + WebSocket), in-process under Keeper"
publish = false

# Phase 3c placeholder — body is currently a `#![allow(dead_code)]` lib
# with no exported symbols. Real deps (hyper, tower, http, …) come back
# when the route table + WebSocket upgrade path land.
[dependencies]

[lints]
workspace = true
